tests/specs/check/check_workspace/check_discover.out
Check [WILDCARD]main.ts
Check [WILDCARD]mod.ts
TS2304 [ERROR]: Cannot find name 'WorkerGlobalScope'.
WorkerGlobalScope;
~~~~~~~~~~~~~~~~~
    at file:///[WILDLINE]/main.ts:8:1

TS2304 [ERROR]: Cannot find name 'WorkerGlobalScope'.
WorkerGlobalScope;
~~~~~~~~~~~~~~~~~
    at file:///[WILDLINE]/member/mod.ts:5:1

Found 2 errors.

TS2304 [ERROR]: Cannot find name 'alert'.
alert;
~~~~~
    at file:///[WILDLINE]/member/mod.ts:2:1

error: Type checking failed.
